Fix bug where tree viewer was not properly centered on ios.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1032,8 +1032,9 @@ blockquote {
         position: fixed;
         top: 0;
         left: 0;
-        height: 100vh;
-        width: 100vw;
+        box-sizing: border-box;
+        height: 100%;
+        width: 100%;
         background: #000;
         z-index: 100;
     }
